adding atmospheric temperature

--- a/public/locales/es/translation.json
+++ b/public/locales/es/translation.json
@@ -5,6 +5,7 @@
   "humidity": "Humedad",
   "visibility": "Visibilidad",
   "airPressure": "Presión del aire",
+  "atmosphericTemperature": "Temperatura atmosférica",
   "unit": "Unidad",
   "city": "Ciudad",
   "errorSearch": "La ubicación ingresada no fue encontrada"
