--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -5,6 +5,7 @@
   "humidity": "Humidity",
   "visibility": "Visibility",
   "airPressure": "Air Pressure",
+  "atmosphericTemperature": "Atmospheric temperature",
   "unit": "Unit",
   "city": "City",
   "errorSearch": "The location was not found"
